# nyxbackup-recovery

./: .env.example  .gitignore  Cargo.toml  NOTICE  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
cmake/: mingw-aarch64.cmake  mingw-x86_64.cmake
crates/bkp-chunker/: Cargo.toml
crates/bkp-chunker/src/: lib.rs  pack.rs
crates/bkp-config/: Cargo.toml
crates/bkp-config/src/: endpoint_url.rs  lib.rs  local_safety.rs
crates/bkp-crypto/: Cargo.toml
crates/bkp-crypto/src/: aead.rs  envelope.rs  hash.rs  hmac.rs  kdf.rs  keys.rs  lib.rs  subkey.rs  tls.rs
crates/bkp-crypto/src/backend/: mod.rs
crates/bkp-log/: Cargo.toml
crates/bkp-log/src/: lib.rs
crates/bkp-manifest/: Cargo.toml
crates/bkp-manifest/src/: lib.rs
crates/bkp-oauth/: Cargo.toml
crates/bkp-oauth/src/: dropbox.rs  google.rs  lib.rs  onedrive.rs
crates/bkp-recover/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
crates/bkp-recover/capabilities/: default.json
crates/bkp-recover/icons/: icon.icns
crates/bkp-recover/src/: checkpoint.rs  commands.rs  dropbox_oauth.rs  errors.rs  google_oauth.rs  lib.rs  menu_i18n.rs  onedrive_oauth.rs  paths.rs  recent.rs  session.rs  settings.rs
crates/bkp-recover/ui/: index.html  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
crates/bkp-recover/ui/src/: App.svelte  app.css  main.ts
crates/bkp-recover/ui/src/lib/: SnapshotFileTree.svelte  api.ts  connect_state.svelte.ts  errors.ts  i18n.svelte.ts
crates/bkp-recover/ui/src/types/: assets.d.ts
crates/bkp-recover/ui/src/views/: About.svelte  Browse.svelte  Connect.svelte  Settings.svelte  Unlock.svelte
crates/bkp-restore/: Cargo.toml
crates/bkp-restore/src/: lib.rs
crates/bkp-storage/: Cargo.toml  build.rs
crates/bkp-storage/src/: backend.rs  lib.rs  nice_net.rs  rate_limited.rs  registry.rs  retry.rs
crates/bkp-storage/src/backends/: azure.rs  b2.rs  dropbox.rs  gcs.rs  googledrive.rs  local.rs  mod.rs  oauth.rs  onedrive.rs  s3.rs  s3_compat.rs  sftp.rs  smb.rs  webdav.rs
crates/bkp-types/: Cargo.toml
crates/bkp-types/src/: backup_set.rs  chunk.rs  endpoint.rs  error.rs  lib.rs  machine.rs  manifest.rs  retention.rs  secret.rs  snapshot.rs
docs/: BUILD_ARM64.md  DATA_FORMAT.md  DESIGN.md  INSTALL.md  LEGAL.md  REQUIREMENTS.md  SECURITY.md  TRANSLATION_WORKFLOW.md
installer/macos/: entitlements.plist
installer/windows/: NyxBackupRecovery-arm64.wxs  NyxBackupRecovery-x86_64.wxs
locales/: cs.json  da.json  de.json  el.json  en.json  es.json  fi.json  fr.json  hi.json  hu.json  it.json  ja.json  ko.json  nb.json  nl.json  pl.json  pt.json  ro.json  ru.json  sv.json  tr.json  uk.json  vi.json  zh.json
scripts/: check_npm_supply_chain.sh  set_version.sh
scripts/dev/: msitools-0.106-wixl-arm64.patch  setup_arm64_buildhost.sh
scripts/i18n/: opus_review.py  translate_fill.py
scripts/linux/: build_linux_arm64.sh  build_linux_x86_64.sh  build_recover_deb_arm64.sh  build_recover_deb_x86_64.sh  build_recover_rpm.sh
scripts/macos/: build_recover_pkg_arm64.sh  build_recover_pkg_universal.sh  build_recover_pkg_x86_64.sh  generate_recover_icon.sh
scripts/windows/: build_recover_msi_arm64.sh  build_recover_msi_x86_64.sh  build_windows_arm64.sh  build_windows_x86_64.sh  sign_pe.sh
