[package]
name        = "bkp-manifest"
version.workspace = true
edition     = "2024"
description = "Manifest and snapshot index serialization/deserialization (CBOR, encrypted envelope)"

[dependencies]
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
ciborium = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bkp-types = { path = "../bkp-types" }
bkp-crypto = { path = "../bkp-crypto" }
