# Copyright (c) 2026 Nyx Software, LLC
# SPDX-License-Identifier: Apache-2.0
# Nyx Backup Recovery - https://nyxbackup.com

[package]
name    = "bkp-oauth"
version.workspace = true
edition = "2024"
description = "Shared OAuth 2.0 authorization-code flow for Google Drive / Dropbox bundled-app credentials"

[dependencies]
anyhow      = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
webbrowser  = "1"
